:bug: Fix bug with overflow on some browsers

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,6 @@
 html {
   font-family: "Rubik", arial, serif;
+  overflow: hidden;
   scroll-behavior: smooth;
 }
 
